--- a/ExchangeCppLayer/CMakeLists.txt
+++ b/ExchangeCppLayer/CMakeLists.txt
@@ -5,9 +5,20 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 add_library(ExchangeCppLayer SHARED ExchangeCppLayer.cpp)
 set_target_properties(ExchangeCppLayer PROPERTIES PREFIX "" OUTPUT_NAME "Exchange" SUFFIX ".layer")
-set(HOOPS_EXCHANGE_DIR "/opt/local/ts3d/HOOPS_Exchange_2020_SP2_U2")
+set(HOOPS_EXCHANGE_DIR $ENV{HOOPS_EXCHANGE_DIR})
 if( NOT DEFINED HOOPS_EXCHANGE_DIR)
     message(FATAL_ERROR "You must set the HOOPS_EXCHANGE_DIR environment variable." )
 endif()
 target_include_directories(ExchangeCppLayer PUBLIC "${HOOPS_EXCHANGE_DIR}/include")
+IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+   SET(exchange_arch "osx64")
+ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+   SET(exchange_arch "linux64")
+ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
+   SET(exchange_arch "win64")
+ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
+
+install(TARGETS ExchangeCppLayer DESTINATION ${HOOPS_EXCHANGE_DIR}/bin/${exchange_arch})
 
